examples/neg/issue548a.effekt
interface Time {
  def now(): Int
}

def withTime[A] { prog: { Time } => A }: A =
  try {
    prog {timeCap}
  } with timeCap: Time {
    def now() = resume(1)
  }

def main() = {
  def b { t: Time }: Time at {t} = box t;  // this is fine
  val cap = withTime {b} // ERROR escape
  def t2: Time = unbox cap
  t2.now();
  ()
}
